[tool.poetry]
name = "python_latex"
version = "0.1.0"
description = "A python package to generate latex code"
authors = ["Quentin Fortier <qpfortier@gmail.com>"]
license = "MIT"
packages = [{include = "python_latex"}]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
